--- a/licap.html
+++ b/licap.html
@@ -19,8 +19,9 @@
 	</header>
 	<main>
 		<section id="first">
-			<div id="arrow">
+			<div id="display">
 				<img src="image/icon/arrow-right.svg" alt="">
+				<div id="licap-model"></div>
 				<img src="image/icon/arrow-left.svg" alt="">
 			</div>
 		</section>
@@ -134,4 +135,7 @@
 		<p class="copyight">Copyright © 2019 HcMusic  CO. LTD. All Rights Reserved.</p>
 	</footer>
 </body>
+<script src="http://threejs.org/build/three.min.js"></script>
+<script src="lib/STLLoader.js"></script>
+<script src="script/licapDisplay.js"></script>
 </html>
