--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<!-- <li>SLiMTAB</li>
 			<li>ABOUT</li>
 			<li>FAQ</li> -->
-			<li id="header-contact-us">CONTACT US</li>
+			<a><li id="header-contact-us">CONTACT US</li></a>
 		</nav>
 	</header>
 	<section id="first">
