--- a/licap.html
+++ b/licap.html
@@ -13,11 +13,11 @@
 		<input type="checkbox" id="menu-toggle"/>
 		<nav id="header-nav">
 			<li><a href="index.html">HOME</a></li>
-			<li><a href="licap.html">LiCAP</a></li>
+			<li><a href="faq.html">FAQ</a></li>
 			<!-- <li>SLiMTAB</li>
 			<li>ABOUT</li>
 			<li>FAQ</li> -->
-			<li id="header-contact-us">CONTACT US</li>
+			<a href="index.html#footer-nav"><li>CONTACT US</li></a>
 		</nav>
 	</header>
 	<main>
@@ -104,6 +104,7 @@
 				<p><a href="index.html">HOME</a></p>
 				<!-- <p>ABOUT</p>
 				<p>FAQ</p> -->
+				<p><a href="faq.html">FAQ</a></p>
 			</div>
 			<div class="footer-series">
 				<div class="footer-title">Product</div>
