--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
 	<header id="header">
-		<img id="top-logo" src="image/logo.svg" alt="">
+		<a href="index.html"><img id="top-logo" src="image/logo.svg" alt=""></a>
 		<label for="menu-toggle"><img id="mini-menu" src="image/icon/mini-menu.png" alt=""></label>
 		<input type="checkbox" id="menu-toggle"/>
 		<nav id="header-nav">
+			<li><a href="index.html">HOME</a></li>
 			<li><a href="licap.html">LiCAP</a></li>
 			<!-- <li>SLiMTAB</li>
 			<li>ABOUT</li> -->
