--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div class="situation-img"></div>
 		</section>
 		<section id="faq">
-			<div id="product-faq">FAQ</div>
+			<a href="faq.html"><div id="product-faq">FAQ</div></a>
 			<img id="product-faq-img" src="image/circle-group.png" alt="">
 		</section>
 
