--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 			<div class="situation-img"></div>
 		</section>
 		<section id="faq">
-			<a href="faq.html"><div id="product-faq">FAQ</div></a>
+			<div id="product-faq">FAQ</div>
 			<img id="product-faq-img" src="image/circle-group.png" alt="">
 		</section>
 
@@ -149,6 +149,9 @@
 	};
 	document.getElementById("product-licap").onclick = function() {
 		window.location.href = "licap.html";
+	}
+	document.getElementById("product-faq").onclick = function() {
+		window.location.href = "faq.html";
 	}
 </script>
 </html>
