--- a/licap.html
+++ b/licap.html
@@ -155,7 +155,7 @@
 		}
 	};
 </script>
-<script src="http://threejs.org/build/three.min.js"></script>
+<script src="https://threejs.org/build/three.min.js"></script>
 <script src="lib/STLLoader.js"></script>
 <script src="script/licapDisplay.js"></script>
 </html>
