--- a/licap.html
+++ b/licap.html
@@ -12,12 +12,12 @@
 		<label for="menu-toggle"><img id="mini-menu" src="image/icon/mini-menu.png" alt=""></label>
 		<input type="checkbox" id="menu-toggle"/>
 		<nav id="header-nav">
-			<li><a href="index.html">HOME</a></li>
-			<li><a href="faq.html">FAQ</a></li>
+			<a href="index.html"><li>HOME</li></a>
+			<a href="licap.html"><li>LiCAP</li></a>
 			<!-- <li>SLiMTAB</li>
-			<li>ABOUT</li>
-			<li>FAQ</li> -->
-			<a href="index.html#footer-nav"><li>CONTACT US</li></a>
+			<li>ABOUT</li> -->
+			<a href="faq.html"><li>FAQ</li></a>
+			<a href="#footer-nav"><li>CONTACT US</li></a>
 		</nav>
 	</header>
 	<main>
