--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<label for="menu-toggle"><img id="mini-menu" src="image/icon/mini-menu.png" alt=""></label>
 		<input type="checkbox" id="menu-toggle"/>
 		<nav id="header-nav">
+			<!-- need modify height in #menu-toggle:checked+#header-nav if add element -->
 			<a href="index.html"><li>HOME</li></a>
 			<a href="licap.html"><li>LiCAP</li></a>
 			<!-- <li>SLiMTAB</li>
