edit contact link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<!-- <li>SLiMTAB</li>
 			<li>ABOUT</li> -->
 			<a href="faq.html"><li>FAQ</li></a>
-			<a href="#footer-nav"><li>CONTACT US</li></a>
+			<a href="index.html#footer-nav"><li>CONTACT US</li></a>
 		</nav>
 	</header>
 	<section id="first">
