adjust footer CSS & licap typesetting

--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,8 @@
             <li><a href="licap.html">LiCAP</a></li>
 			<!-- <li>SLiMTAB</li>
 			<li>ABOUT</li>
-			<li>FAQ</li> -->
+            <li>FAQ</li> -->
+            <li><a id="nav-faq-label" href="faq.html">FAQ</a></li>
 			<li><a href="index.html#footer-nav">CONTACT US</a></li>
 		</nav>
     </header>
@@ -130,4 +131,8 @@
         </section>
     </main>
 </body>
+<script>
+    let faq = document.getElementById("nav-faq-label")
+    faq.classList.add("on-this-page")
+</script>
 </html>
