--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		</nav>
 	</header>
 	<section id="first">
-		<div id="bf-intro">We change the way<br>
+		<div id="bf-intro">We innovate the way<br>
 			of live, recording,<br>
 			sharing and practicing for musician</div>
 	</section>
