rwd and rotate button

--- a/licap.html
+++ b/licap.html
@@ -29,9 +29,9 @@
 		</section>
 		<section id="first">
 			<div id="display">
-				<img src="image/icon/arrow-right.svg" alt="">
+				<img id="rotate-right" src="image/icon/arrow-right.svg" alt="">
 				<div id="licap-model"></div>
-				<img src="image/icon/arrow-left.svg" alt="">
+				<img id="rotate-left" src="image/icon/arrow-left.svg" alt="">
 			</div>
 		</section>
 		<section id="product">
