adjust index to red style

--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 	</section>
 	<main>
 		<section id="product">
-			<img class="green-circle" src="image/circle-group.png" alt="">
+			<img class="green-circle" src="image/circle-group-red.png" alt="">
 			<h4>OUR PRODUCT</h4>
 			<h4>OUR<br>PRODUCT</h4>
 			<div id="two-product">
 				<div class="product-block" id="product-licap">
-					<img src="image/circle-group.png" alt="">
+					<img src="image/circle-group-red.png" alt="">
 					<div class="product-name">
 						<p>LiCAP</p>
 						<div class="product-line"></div>
 					</div>
 				</div>
 				<div class="product-block">
-					<img src="image/circle-group.png" alt="">
+					<img src="image/circle-group-red.png" alt="">
 					<div class="product-name">
 						<p>SLiMTAB</p>
 						<div class="product-line"></div>
@@ -57,7 +57,7 @@
 				Make guitar great again!
 			</p>
 			<div class="blue-cube"></div>
-			<img class="green-circle" src="image/circle-group.png" alt="">
+			<img class="green-circle" src="image/circle-group-red.png" alt="">
 			<div class="situation-img"></div>
 		</section>
 		<section id="sharing" class="situation">
@@ -68,7 +68,7 @@
 				Live Compose, Live Rehearsal, ONLINE.
 			</p>
 			<div class="blue-cube"></div>
-			<img class="green-circle" src="image/circle-group.png" alt="">
+			<img class="green-circle" src="image/circle-group-red.png" alt="">
 			<div class="situation-img"></div>
 		</section>
 		<section id="recording" class="situation">
@@ -79,7 +79,7 @@
 				Wireless and your jack is still free.
 			</p>
 			<div class="blue-cube"></div>
-			<img class="green-circle" src="image/circle-group.png" alt="">
+			<img class="green-circle" src="image/circle-group-red.png" alt="">
 			<div class="situation-img"></div>
 		</section>
 		<section id="practice" class="situation">
@@ -91,12 +91,12 @@
 				Practice makes you perfect on stage.
 			</p>
 			<div class="blue-cube"></div>
-			<img class="green-circle" src="image/circle-group.png" alt="">
+			<img class="green-circle" src="image/circle-group-red.png" alt="">
 			<div class="situation-img"></div>
 		</section>
 		<section id="faq">
 			<div id="product-faq">FAQ</div>
-			<img id="product-faq-img" src="image/circle-group.png" alt="">
+			<img id="product-faq-img" src="image/circle-group-red.png" alt="">
 		</section>
 
 	</main>
