adjust contact link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<!-- <li>SLiMTAB</li>
 			<li>ABOUT</li> -->
 			<a href="faq.html"><li>FAQ</li></a>
-			<a href="index.html#footer-nav"><li>CONTACT US</li></a>
+			<a href="index.html#footer"><li>CONTACT US</li></a>
 		</nav>
 	</header>
 	<section id="first">
@@ -100,7 +100,7 @@
 		</section>
 
 	</main>
-	<footer>
+	<footer id="footer">
 		<div id="footer-nav">
 			<!-- <div class="footer-series">
 				<div class="footer-title">Information</div>
