--- a/faq.html
+++ b/faq.html
@@ -17,7 +17,7 @@
 			<!-- <li>SLiMTAB</li>
 			<li>ABOUT</li> -->
 			<a href="faq.html"><li id="nav-faq-label" >FAQ</li></a>
-			<a href="index.html#footer-nav"><li>CONTACT US</li></a>
+			<a href="index.html#footer"><li>CONTACT US</li></a>
 		</nav>
     </header>
     <h1 id="faq-title">FAQ.</h1>
