add about page.

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 			<!-- need modify height in #menu-toggle:checked+#header-nav if add element -->
 			<a href="index.html"><li id="nav-home-label" >HOME</li></a>
 			<a href="licap.html"><li>LiCAP</li></a>
-			<!-- <li>SLiMTAB</li>
-			<li>ABOUT</li> -->
+			<!-- <li>SLiMTAB</li> -->
+			<a href="about.html"><li>ABOUT</li></a>
 			<a href="faq.html"><li>FAQ</li></a>
 			<a href="index.html#footer"><li>CONTACT US</li></a>
 		</nav>
@@ -123,7 +123,7 @@
 			<div class="footer-series">
 				<div class="footer-btn">
 					<li><a href="index.html">HOME</a></li>
-					<li><a href="">ABOUT</a></li>
+					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="faq.html">FAQ</a></li>
 					<li><a href="">WORK WITH US</a></li>
 				</div>
@@ -143,7 +143,7 @@
 		<div id="phone-footer-nav">
 			<div class="footer-btn">
 				<li><a href="index.html">HOME</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="about.html">ABOUT</a></li>
 				<li><a href="faq.html">FAQ</a></li>
 				<li><a href="">WORK WITH US</a></li>
 			</div>
