--- a/faq.html
+++ b/faq.html
@@ -14,8 +14,8 @@
 		<nav id="header-nav">
             <a href="index.html"><li>HOME</li></a>
 			<a href="licap.html"><li>LiCAP</li></a>
-			<!-- <li>SLiMTAB</li>
-			<li>ABOUT</li> -->
+			<!-- <li>SLiMTAB</li> -->
+			<a href="about.html"><li>ABOUT</li></a>
 			<a href="faq.html"><li id="nav-faq-label" >FAQ</li></a>
 			<a href="index.html#footer"><li>CONTACT US</li></a>
 		</nav>
