--- a/licap.html
+++ b/licap.html
@@ -14,10 +14,10 @@
 		<nav id="header-nav">
 			<a href="index.html"><li>HOME</li></a>
 			<a href="licap.html"><li id="nav-licap-label" >LiCAP</li></a>
-			<!-- <li>SLiMTAB</li>
-			<li>ABOUT</li> -->
+			<!-- <li>SLiMTAB</li> -->
+			<a href="about.html"><li>ABOUT</li></a>
 			<a href="faq.html"><li>FAQ</li></a>
-			<a href="index.html#footer"><li>CONTACT US</li></a>
+			<a href="licap.html#footer"><li>CONTACT US</li></a>
 		</nav>
 	</header>
 	<main>
@@ -138,12 +138,12 @@
 			</div>
 		</section>
 	</main>
-	<footer>
+	<footer id="footer">
 		<div id="footer-nav">
 			<div class="footer-series">
 				<div class="footer-btn">
 					<li><a href="index.html">HOME</a></li>
-					<li><a href="">ABOUT</a></li>
+					<li><a href="about.html">ABOUT</a></li>
 					<li><a href="faq.html">FAQ</a></li>
 					<li><a href="">WORK WITH US</a></li>
 				</div>
@@ -163,7 +163,7 @@
 		<div id="phone-footer-nav">
 			<div class="footer-btn">
 				<li><a href="index.html">HOME</a></li>
-				<li><a href="">ABOUT</a></li>
+				<li><a href="about.html">ABOUT</a></li>
 				<li><a href="faq.html">FAQ</a></li>
 				<li><a href="">WORK WITH US</a></li>
 			</div>
