--- a/faq.html
+++ b/faq.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="style/faq_style.css">
 </head>
 <body>
+    <div id="red-line"></div>
 	<header id="header">
         <a href="index.html"><img id="top-logo" src="image/logo.svg" alt=""></a>
 		<label for="menu-toggle"><img id="mini-menu" src="image/icon/mini-menu.png" alt=""></label>
