adjust to darker and banner more black

--- a/about.html
+++ b/about.html
@@ -23,8 +23,12 @@
     </header>
     <main>
         <section id="slogan">
-            <p>What we do is Digify <br>
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and Share musics</p>
+			<div class="show-block">
+            	<p>What we do is Digify <br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and Share musics
+				</p>
+			</div>
+			<div class="black-block"></div>
         </section>
         <section id="first">
             <h4>It is all begin with LiCAP</h4>
