--- a/licap.html
+++ b/licap.html
@@ -129,11 +129,11 @@
 				</div>
 				<div class="spec-block">
 					<div class="title">Accessory</div>
-					<div class="spec-content">USB Charger / Type C Cable</div>
+					<div class="spec-content">USB charger / type C cable</div>
 				</div>
 				<div class="spec-block">
 					<div class="title">Software</div>
-					<div class="spec-content">LiCON MIDI CC Mapping Application</div>
+					<div class="spec-content">LiCON MIDI CC mapping application</div>
 				</div>
 			</div>
 		</section>
