adjust about css & font display

--- a/about.html
+++ b/about.html
@@ -24,9 +24,10 @@
     <main>
         <section id="slogan">
 			<div class="show-block">
-            	<p>What we do is Digify <br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and Share musics
+            	<p>What we do is digify <br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and share musics
 				</p>
+				<p>What we do is digify <br>and share musics</p>
 			</div>
 			<div class="black-block"></div>
         </section>
