modify rotation tips

--- a/licap.html
+++ b/licap.html
@@ -29,9 +29,12 @@
 		</section>
 		<section id="first">
 			<div id="display">
-				<img id="rotate-right" src="image/icon/arrow-right.svg" alt="">
+				<img id="rotate-3d" src="image/icon/3d_rotation.png" alt="">
 				<div id="licap-model"></div>
-				<img id="rotate-left" src="image/icon/arrow-left.svg" alt="">
+				<div id="touch-tip">
+					<img id="touch-hand" src="image/icon/two-finger.png"/>
+					<div>Touch by two fingers to rotate</div>
+				</div>
 			</div>
 		</section>
 		<section id="product">
