adjust boom image

--- a/licap.html
+++ b/licap.html
@@ -43,7 +43,7 @@
 				<div id="info-content">
 					LiCAP is the world first one-piece wireless midi controller on your guitar.<br>LiCAP breaks the limite of your guitar on live perfroming and compose.<br><br>Easy installation on accoustic and electric guitars.
 				</div>
-				<img src="./image/old_licap_boom.png" alt="">
+				<img src="./image/old_licap_boom.jpg" alt="">
 			</div>
 			<!-- <div id="up-spec">
 				<div id="in-spec">
